--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-router": "^8.0.8",
     "koa-session": "^5.13.1",
     "md5-node": "^1.0.1",
+    "mime": "^2.4.4",
     "mysql2": "^2.1.0",
     "string-random": "^0.1.3",
     "winston": "^3.2.1"
