--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "md5-node": "^1.0.1",
     "mime": "^2.4.4",
     "mysql2": "^2.1.0",
+    "sleep": "^6.1.0",
     "string-random": "^0.1.3",
     "winston": "^3.2.1"
   },
